fixed scrollbar / popover zindex order

--- a/src/renderer/styles/elements/_scrollbar.scss
+++ b/src/renderer/styles/elements/_scrollbar.scss
@@ -21,7 +21,7 @@
 .ps__rail-x,
 .ps__rail-y {
   -webkit-app-region: initial;
-  z-index: 20000;
+  z-index: 9000;
 }
 
 .ps__rail-x {
